app/assets/stylesheets/molecules/_sendbar.scss
.sendbar {
  border-collapse: separate;
  display: flex;
  margin: auto;
  max-width: $site-max-width;
  padding: $padding-small;
  width: 100%;

  .sendbar-inner {
    height: auto;
    overflow: hidden;
  }
  #sendbar-image-upload {
    border-color: #018470;
    border-style: solid;
    border-width: 2px 0px 2px 2px;
    flex: 0 0 60px;
    text-align: center;
  }
  #sendbar-textarea {
    border: 2px solid #018470;
    flex-grow: 1;
    width: 100%;
  }
  #sendbar-buttons {
    flex: 0 0 20px;
    flex-basis: auto;
    margin: 10px 20px;
    #send_icon {
      display: block;
      background-color: transparent;
      border: none;
      font-size: 30px;
      color: $color-teal;
      &:focus {
        outline: 0;
      }
      @supports(-webkit-overflow-scrolling: touch) {
        margin-left: -30px;
      }
    }
    #send_message, #send_later {
      display: none;
    }
    @include media($tablet-up) {
      flex: 0 0 250px;
      margin: 0px 10px;
      #send_icon {
        display: none;
      }
      #send_message, #send_later {
        display: block;
      }
    }

    @include media($site-max-up) {
      &.warning-visible {
        margin-top: 17px;
      }
    }
  }
}

#sendbar-like-options {
  border-collapse: separate;
  display: flex;
  margin: auto;
  max-width: $site-max-width;
  padding-bottom: 1rem;
  width: 100%;

  like-options {
    float: right;
    width: 100%;

    like-option {
      cursor: pointer;
      display: inline-block;
      background: white;
      border: 1px #c1c1c1 solid;
      border-radius: 5px;
      margin: 7px 0px 2px 0px;
      padding: 7px;
      text-align: center;
      width: 24.5%;
      @include media($site-max-up) {
        width: 22.8%;
      }
    }
    like-option:hover {
      background: $color-tan;
    }
    like-option:nth-child(n+5) {
      display: none;
    }
    like-option:focus {
      border: 2px $color-teal solid;
      margin: 6px 0px 1px 0px;
      outline: none;
    }
  }
}

.sendbar-showing-count {
  padding: 0 $padding-small $padding-small $padding-small;
}

.character-count {
  display: flex;
  font-size: 12px;
  line-height: 1em;
  margin: auto;
  max-width: $site-max-width;
  padding: 1rem 1rem 0 1rem;
}

.relative-container {
  position: relative;
}

.pull-bottom {
  @include media($tablet-up) {
    position: absolute;
    bottom: 0;
  }
  left: 0;
}

.sendbar__input {
  border: none;
  padding: .5em 1.2em .5em .7em;
  margin: 0;
  outline: 0;
  resize: none;
  max-height: 115px;
  width: 100%;
}
#send_later {
  margin-right: .3em;
  @include media($tablet-up) {
    margin-right: 0;
  }
}
.sendbar__button {
  @include transition(all $animation-fast);
  @include user-select(none);
  button {
    display: none;
  }

  @extend .button;
  display: table-cell;
  appearance: none;
  vertical-align: top;
  min-width: 5em;
  text-align: center;
  float: right;

  @include media($tablet-up) {
    float: left;
  }

  &:hover {
    color: #FFFFFF;
    background-color: tint($color-teal, 30%);
    border-color: tint($color-teal, 30%);
  }

  &:active {
    color: $color-teal;
    background-color: shade($color-teal, 10%);
    border-color: shade($color-teal, 10%);
  }
}

.scheduled-messages-bar {
  background-color: $color-header;
  border-color: $color-light-grey;
  border-style: solid;
  border-width: 1px 1px 0 1px;
  display: block;
  padding: $padding-small;
  text-align: center;
  width: 100%;
}

section.message--create #sendbar-container{
  width: 100%;
  border-top: 2px solid $color-light-grey;
}

#image-upload {
  margin-top: 7px;
  margin-bottom: -4px;
  margin-right: -2px;
  text-align: center;

  .icon-photo {
    font-size: 34px;
  }

  input {
    display: none;
  }

  button {
    background-color: transparent;
    border-color: transparent;
  }
}

#file-name-preview {

  .image-help-text {
    vertical-align: middle;
    display: inline-block;

    .file-name {
      max-width: 180px;
      font-size: 15px;
      overflow: hidden;
      white-space:nowrap;
      text-overflow:ellipsis;
      display: inline-block;
      vertical-align: middle;

      @include media($mobile-up) {
        max-width: 320px;
      }

      @include media($tablet-up) {
        max-width: 480px;
      }
    }
  }
}

#image-cancel {
  background-color: transparent;
  border-color: transparent;
  vertical-align: middle;

  .hidden {
    display: none;
  }
  i {
    vertical-align: middle;
    font-size: 25px;
  }
}

.right-fluid {
  overflow: hidden;
  margin-top: -2px;
  margin-bottom: -9px;
}

.warning {
  color: $color-red;
}

added {
  background-color: $color-green;
  color: $color-white;
  border-radius: .1em;
  font-size: .6em;
  margin: 10px;
  padding: 0px 6px 0px 6px;
  vertical-align: middle;

  &:before {
    content: 'ADDED';
  }
}

